<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">new 24 points</string>    
	<string name="login_out_sure">Rest</string>
	<string name="rule_sure">I get It</string>
	<string name="login_out_cancel">Continue</string>
	<string name="login_out_title_tip">Exit the game？</string>
	<string name="game_over_title_tip">Can you play again？</string>	
	<string name="game_over_yes">Surrender</string>
	<string name="game_over_again">Send Poke</string>
	<string name="game_description_icon">Rule</string>	
	<string name="game_description">24 points to 4 integer (usually a positive integer) multiplication and division through addition and subtraction, so the final calculation is a mathematical game 24 
You can test the sensitivity of human intelligence and mathematics. Is usually used for poker games, a card the size of the queen in removing remaining 52 (if the beginning of training can be only 1 to 10 of these 40 cards), 
Arbitrarily selected four cards (called the deck), with addition, subtraction, multiplication, and division (can be added in parentheses) the number of face cards count as 24. Each card must and can only be used once, such as taking the card is 3,8,8,9, 
Then the formula for the (9-8) × 8 × 3 or 3 × 8 ÷ (9-8) or (9-8 ÷ 8) × 3, you can click to get the answer shows the calculation results, which, J on behalf of 11 , 
Q is 12, K on behalf of 13, I wish you good luck and support the development of my career, please click below ad, thank you!</string>
	<string name="test_other_people">Test others</string>	
	<string name="ad_miss_icon">Support</string>	
	<string name="ad_show_miss_icon">I get It</string>	
	<string name="ad_noshow_miss_icon">No tip again</string>	
	<string name="ad_show_content">Click on the bottom of the ads, you can hide the banner, get a better gaming experience, thank you!</string>	
	<string name="div_no_zeng">X/.</string>
	<string name="div_illegal">X/0</string>
	<string name="counting_tip_cal">Calculating,please wait...</string>
	<string name="counting_tip_no">Sorry, no answer!</string>
	<string name="counting_tip_washing">Washing, get four cards!</string>
	<string name="msg_tip_title">24 point game：</string>
	<string name="msg_tip_tip">can you use the four card get a result of 24.</string>	
	<string name="make_question_demo">question</string>	
	<string name="make_question_ok">Ok</string>	
	<string name="make_question_cancel">Cancel</string>	
	<string name="number_1">first number</string>	
	<string name="number_2">second number</string>	
	<string name="number_3">third number</string>	
	<string name="number_4">fourth number</string>
	<string name="number_wrong_tip">Must be less than two, and four numbers can not be empty.</string>
	
	<string name="next_menu_label">next</string>
	<string name="pref_menu_label">pref</string>
	
	<string name="get_score_menu_label">get score</string>
	<string name="use_score_menu_label">use score</string>
	<string name="reset_menu_label">reset game</string>
	
	<!-- 底部按钮和顶部按钮，长按提示 -->
	<string name="exit_app_label">exit</string>
	<string name="pre_question_label">pre-question</string>
	<string name="reset_question_label">reset-question</string>
	<string name="next_question_label">next-question</string>
	<string name="answer_question_label">answer</string>
	<string name="get_score_label">get score</string>
	<string name="setting_label">more</string>
</resources>